@@ -3,6 +3,9 @@ netcfg (0.67) UNRELEASED; urgency=low
   * Per Olofsson
     - Fixed segfault in find_in_devnames when a card was missing a devnames
       entry.
+  * Otavio Salvador 
+    - Write the common data before the static configuration so the file is
+    not replaced anymore (Closes: #250740).
 
  -- Per Olofsson <pelle@dsv.su.se>  Mon, 24 May 2004 21:57:42 +0200
 
